# sandbox

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_ZH.md  CLAUDE.md  IMPLEMENTATION_REPORT.md  LICENSE.txt  README.md  README_ZH.md  README_zh.md  docker-compose.yml  docker-composer.yaml  pyproject.toml  run.py  test_docker_scheduler.py  test_e2e_s3_workspace.py
runtime/executor/: AGENTS.md  Dockerfile  Makefile  QUICK_START.md  README.md  __init__.py  pyproject.toml  requirements.txt  start.sh  stop.sh
runtime/executor/application/: __init__.py  services.py
runtime/executor/application/commands/: __init__.py  execute_code.py
runtime/executor/application/dto/: __init__.py  execute_request.py
runtime/executor/application/services/: __init__.py  executor_service.py  heartbeat_service.py  lifecycle_service.py  session_config_sync_service.py
runtime/executor/docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  quick-start.md  startup-guide.md  troubleshooting.md  user-namespace-guide.md
runtime/executor/domain/: __init__.py  entities.py  services.py  value_objects.py
runtime/executor/domain/ports/: __init__.py  artifact_scanner_port.py  callback_port.py  executor_port.py  heartbeat_port.py  isolation_port.py  lifecycle_port.py
runtime/executor/infrastructure/: __init__.py  bwrap.py  result_reporter.py
runtime/executor/infrastructure/config/: __init__.py  config.py
runtime/executor/infrastructure/http/: __init__.py  callback_client.py
runtime/executor/infrastructure/isolation/: __init__.py  bwrap.py  code_wrapper.py  macseatbelt.py  result_parser.py  subprocess.py
runtime/executor/infrastructure/logging/: __init__.py  logging_config.py
runtime/executor/infrastructure/monitoring/: __init__.py  metrics.py
runtime/executor/infrastructure/persistence/: __init__.py  artifact_scanner.py
runtime/executor/interfaces/: __init__.py  rest.py
runtime/executor/interfaces/http/: __init__.py  rest.py
runtime/executor/tests/: fixtures.py  utils.py
runtime/executor/tests/contract/: test_callback_client.py  test_execute_endpoint.py  test_health_endpoint.py
runtime/executor/tests/integration/: test_artifacts.py  test_heartbeat.py  test_hexagonal_arch.py  test_isolation.py  test_lifecycle.py  test_metrics.py  test_python_execution.py  test_result_reporting.py  test_timeout.py
runtime/executor/tests/unit/: test_artifact_scanner.py  test_bwrap_args.py
sandbox-runtime/: .gitignore  Dockerfile  LICENSE.txt  README.md  azure-pipelines.yml  load_env.ps1  load_env.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_imports.py
sandbox-runtime/docs/: CLI-README.md
sandbox-runtime/examples/: download_example.py  efast_download_example.py  jupyter_gateway_example.py  jupyter_gateway_ws_example.py  sandbox.py  shared_env_example.py
sandbox-runtime/examples/cli_handler_example/: cli_simple.py  cli_timeout.py  pandas.py  sensitive_words_detect.py
sandbox-runtime/helm/sandbox-runtime/: Chart.yaml  _componentMeta.json  values.yaml
sandbox-runtime/helm/sandbox-runtime/templates/: deployment.yaml  service.yaml
sandbox-runtime/scripts/: sandbox-run
sandbox-runtime/src/sandbox_runtime/: __init__.py  errors.py  main.py  settings.py
sandbox-runtime/src/sandbox_runtime/cli/: __init__.py  config.py  formatter.py  main.py  runner.py
sandbox-runtime/src/sandbox_runtime/python_runner/: __init__.py  exec_runner.py  jupyter_gateway_runner.py
sandbox-runtime/src/sandbox_runtime/sandbox/: README.md
sandbox-runtime/src/sandbox_runtime/sdk/: base.py  shared_env.py
sandbox-runtime/src/sandbox_runtime/utils/: __init__.py  clean_task.py  common.py  efast_downloader.py  http_api.py  loggers.py
sandbox-runtime/test/: test_common.py  test_efast_downloader.py  test_http_api.py  test_sdk.py  test_sdk_shared_env.py  test_shared_env_server.py
sandbox_control_plane/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  start.sh  stop.sh
sandbox_control_plane/deploy/k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  03-serviceaccount.yaml  04-role.yaml  05-control-plane-deployment.yaml  06-juicefs-csi-driver.yaml  09-juicefs-setup.yaml  10-juicefs-hostpath-setup.yaml  README.md  deploy.sh
sandbox_control_plane/scripts/: README.md  install_s3fs.sh
sandbox_control_plane/scripts/migrations/: add_execution_metrics.py
sandbox_control_plane/src/application/: __init__.py
sandbox_control_plane/src/application/commands/: create_session.py  create_template.py  execute_code.py  install_session_dependencies.py  update_template.py
sandbox_control_plane/src/application/dtos/: container_dto.py  execution_dto.py  session_dto.py  template_dto.py
sandbox_control_plane/src/application/queries/: get_execution.py  get_session.py  get_template.py  list_containers.py
sandbox_control_plane/src/application/services/: container_service.py  file_service.py  session_cleanup_service.py  session_service.py  session_stuck_creating_service.py  state_sync_service.py  template_service.py  warm_pool_service.py
sandbox_control_plane/src/domain/: __init__.py
sandbox_control_plane/src/domain/entities/: container.py  execution.py  session.py  template.py
sandbox_control_plane/src/domain/repositories/: container_repository.py  execution_repository.py  runtime_node_repository.py  session_repository.py  template_repository.py
sandbox_control_plane/src/domain/services/: scheduler.py  storage.py
sandbox_control_plane/src/domain/value_objects/: __init__.py  artifact.py  container_status.py  execution_request.py  (+2 more)
sandbox_control_plane/src/infrastructure/: dependencies.py
sandbox_control_plane/tests/: conftest.py  helpers.py
sandbox_control_plane/tests/integration/: README.md  conftest.py  test_background_tasks.py  test_containers_api.py  test_csi_mount.py  test_dependency_installation.py  test_e2e_s3_workspace.py  test_e2e_workflow.py  test_executions_api.py  test_state_sync.py  test_stdlib_execution.py  test_templates_api.py  test_warm_pool.py
(+348 files in other folders)
