[metadata]
name = sandbox-runtime
version = 0.1.0
description = Sandbox environment for code execution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/sandbox-runtime
authors = Chen Xiao <xavier.chen@aishu.cn>
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiohttp==3.12.0
    fastapi==0.115.12
    paramiko==3.5.1
    psutil==7.1.3
    pydantic==2.11.5
    pydantic-settings==2.12.0
    python-multipart>=0.0.20
    pyyaml>=6.0.1
    requests==2.32.3
    uvicorn==0.34.3

[options.packages.find]
where = src

[options.extras_require]
server =
    fastapi>=0.100.0
    uvicorn>=0.22.0
    python-multipart>=0.0.6
    python-multipart>=0.0.20
sdk =
    requests>=2.31.0
    aiohttp>=3.12.0

[options.entry_points]
console_scripts =
    sandbox-run = sandbox_runtime.cli.main:entry_point