[project]
name = "sandbox-control-plane"
version = "2.1.0"
description = "Sandbox Control Plane - 六边形架构实现"
authors = [
    {name = "Sandbox Team", email = "team@sandbox.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["sandbox", "code-execution", "hexagonal-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web 框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # 数据库相关
    "sqlalchemy[asyncio]>=2.0.23",
    "aiomysql>=0.2.0",
    "alembic>=1.12.0",

    # HTTP 客户端
    "httpx>=0.25.0",

    # 对象存储
    "boto3>=1.34.0",

    # 容器运行时
    "docker>=7.0.0",
    "kubernetes>=28.1.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # 用于测试 FastAPI

    # 代码质量
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",

    # 类型存根
    "types-redis>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/sandbox/sandbox-control-plane"
Documentation = "https://docs.sandbox.ai"
Repository = "https://github.com/sandbox/sandbox-control-plane"
Issues = "https://github.com/sandbox/sandbox-control-plane/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Black 配置
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # 自定义排除
  | migrations
)/
'''

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (由 black 处理)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # 未使用的导入

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

# Mypy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "kubernetes.*",
    "boto3.*",
]
ignore_missing_imports = true

# Coverage 配置
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
